Fixed email template footer mis-alignment

--- a/public/raw/styles.css
+++ b/public/raw/styles.css
@@ -76,7 +76,6 @@ body {
 }
 
 .footer {
-  width: 100%;
   clear: both;
   color: #999;
   padding: 20px;
